# vessel

./: .gitignore  Cargo.toml  Makefile.toml  README.md
vessel-cli/: Cargo.toml  README.md
vessel-cli/src/: lib.rs  main.rs  types.rs
vessel-cli/src/commands/: handler.rs  mod.rs
vessel-cli/src/commands/agents/: handler.rs  mod.rs  types.rs  utils.rs
vessel-cli/src/commands/identity/: mod.rs
vessel-cli/src/commands/identity/account/: handler.rs  mod.rs
vessel-cli/src/commands/identity/verifiable/: mod.rs
vessel-cli/src/commands/identity/verifiable/credential/: handler.rs  mod.rs  types.rs
vessel-cli/src/commands/identity/verifiable/presentation/: handler.rs  mod.rs  types.rs
vessel-cli/src/commands/ping/: handler.rs  mod.rs
vessel-cli/src/models/: db.rs  mod.rs  types.rs
vessel-cli/src/models/identity/: mod.rs
vessel-cli/src/models/identity/account/: account.rs  accounts.rs  mod.rs  types.rs
vessel-cli/src/models/identity/verifiable/: credential.rs  mod.rs  presentation.rs
vessel-cli/src/utils/: db.rs  homedir.rs  mod.rs  rpc.rs
vessel-core/: Cargo.toml  README.md  make.toml
vessel-core/src/: lib.rs
vessel-core/src/identity/: mod.rs
vessel-core/src/identity/account/: account.rs  mod.rs  types.rs  uri.rs  usecase.rs
vessel-core/src/identity/connection/: api.rs  connection.rs  mod.rs  notification.rs  types.rs  usecase.rs
vessel-core/src/identity/verifiable/: mod.rs  types.rs  usecase.rs  vc.rs  vp.rs
vessel-core/src/identity/verifiable/credential/: credential.rs  holder.rs  mod.rs  types.rs  usecase.rs
vessel-core/src/identity/verifiable/presentation/: mod.rs  presentation.rs  types.rs  usecase.rs  verifier.rs
vessel-core/src/identity/verifiable/proof/: builder.rs  mod.rs  types.rs  verifier.rs
vessel-core/src/ssi/account/: types.rs  usecase.rs
vessel-rpc/: .gitignore  Cargo.toml  README.md
vessel-rpc/src/: lib.rs
vessel-rpc/src/apps/: db.rs  mod.rs  types.rs
vessel-rpc/src/apps/db/: bucket.rs  builder.rs  mod.rs  runner.rs  types.rs
vessel-rpc/src/apps/db/merge_operators/: bucket.rs
vessel-rpc/src/apps/identity/account/: mod.rs  repository.rs
vessel-rpc/src/apps/identity/verifiable/credential/: merge_operators.rs  mod.rs  repository.rs
vessel-rpc/src/apps/identity/verifiable/presentation/: repository.rs
vessel-rpc/src/common/: helpers.rs  mod.rs  types.rs
vessel-rpc/src/config/: app.rs  config.rs  database.rs  mod.rs  parser.rs
vessel-rpc/src/config/fixtures/: config.toml  config_app.toml  config_db.toml
vessel-rpc/src/rpc/: manager.rs  mod.rs
vessel-rpc/src/rpc/db/: bucket.rs  builder.rs  mod.rs  types.rs
vessel-rpc/src/rpc/db/merge_operators/: bucket.rs
vessel-rpc/src/rpc/identity/: mod.rs
vessel-rpc/src/rpc/identity/account/: handler.rs  mod.rs  repository.rs  rpc_client.rs  rpc_method.rs  rpc_param.rs
vessel-rpc/src/rpc/identity/verifiable/: mod.rs
vessel-rpc/src/rpc/identity/verifiable/credential/: handler.rs  mod.rs  repository.rs  rpc_client.rs  rpc_method.rs  rpc_param.rs
vessel-rpc/src/rpc/identity/verifiable/presentation/: handler.rs  mod.rs  repository.rs  rpc_client.rs  rpc_method.rs  rpc_param.rs
vessel-rpc/src/rpc/shared/: helpers.rs  mod.rs  types.rs
vessel-rpc/src/rpc/shared/db/: builder.rs
vessel-rpc/src/rpc/shared/db/merge_operators/: bucket.rs
vessel-rpc/src/rpc/shared/rpc/: method.rs  mod.rs  rpc.rs  types.rs
vesseld/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  make.toml
vesseld/src/: errors.rs  lib.rs  main.rs
vesseld/src/svc/: rpc.rs
