[workspace]
resolver = "2"

members = [ "vessel-cli",
    "vesseld",
    "vessel-core", 
    "vessel-rpc",
    "vessel-cli",
]

[workspace.package]
rust-version = "1.77"
edition = "2021"
repository = "https://github.com/prople/vessel/tree/main"
homepage = "https://github.com/prople"
license = "AGPL-3.0-or-later"
authors = ["rstlix0x0 (@rstlix0x0)", "Vessel Contributors (@prople/vessel-contributors)"]

[workspace.dependencies]
prople-vessel-core = {version = "~0.2", path = "vessel-core"}

prople-did-core = {version = "~0.5"}
prople-crypto = {version = "~0.2"}
rst-common = {version = "~1", features=["with-errors", "with-tokio"]}
rstdev-domain = {version = "~0.1"}
rstdev-config = {version = "~0.1"}
rstdev-storage = {version = "~0.3", features=["rocksdb"]}
toml = {version = "~0.8"}
clap = {version = "~4.5", features=["derive"]}
mockall  = {version = "0.12.1"}
multiaddr = {version = "0.18.1"}
table-test = {version = "0.2.1"} 
