[workspace]
resolver = "2"

members = [ 
    "vesseld",
    "vessel-core", 
    "vessel-rpc",
    "vessel-cli",
]

[workspace.package]
rust-version = "1.77"
edition = "2021"
repository = "https://github.com/prople/vessel/tree/main"
homepage = "https://github.com/prople"
license = "AGPL-3.0-or-later"
authors = ["rstlix0x0 (@rstlix0x0)", "Vessel Contributors (@prople/vessel-contributors)"]

[workspace.dependencies]
# internal prople/vessel libraries
prople-vessel-core = {version = "~0.3", path = "vessel-core"}
prople-vessel-rpc = {version = "~0.1", path = "vessel-rpc"}

# external prople libraries
prople-did-core = {version = "~0.5"}
prople-crypto = {version = "~0.2"}
prople-jsonrpc-core = {version = "~0.1"}
prople-jsonrpc-client = {version = "~0.1"}

# rstdev and rst_common libraries
rst-common = {version = "~1", features=["standard", "with-errors", "with-tokio"]}
rstdev-domain = {version = "~0.1"}
rstdev-config = {version = "~0.1"}
rstdev-storage = {version = "~0.3", features=["rocksdb"]}

# third party libraries
toml = {version = "~0.8"}
clap = {version = "~4.5", features=["derive"]}
mockall  = {version = "~0.12"}
multiaddr = {version = "~0.18"}
table-test = {version = "~0.2"} 
once_cell = {version = "~1.19"}
