[workspace]
resolver = "2"

members = [ 
    "vesseld",
    "vessel-core", 
    "vessel-rpc",
    "vessel-cli",
]

[workspace.package]
rust-version = "1.77"
edition = "2021"
repository = "https://github.com/prople/vessel/tree/main"
homepage = "https://github.com/prople"
license = "AGPL-3.0-or-later"
authors = ["rstlix0x0 (@rstlix0x0)", "Vessel Contributors (@prople/vessel-contributors)"]

[workspace.dependencies]
# internal prople/vessel libraries
prople-vesseld = {version = "~0.1", path = "vesseld"}
prople-vessel-core = {version = "~0.4", path = "vessel-core"}
prople-vessel-rpc = {version = "~0.2", path = "vessel-rpc"}
prople-vessel-cli = {version = "~0.1", path = "vessel-cli"}

# external prople libraries
prople-did-core = {version = "~0.5"}
prople-crypto = {version = "~0.2"}
prople-jsonrpc-core = {version = "~0.4"}
prople-jsonrpc-client = {version = "~0.1"}
prople-jsonrpc-axum = {version = "~0.2"}

# rstdev and rst_common libraries
rst-common = {version = "~1", features=["standard", "with-errors", "with-tokio", "with-tracing", "with-http-tokio"]}
rstdev-domain = {version = "~0.1"}
rstdev-config = {version = "~0.1"}
rstdev-storage = {version = "~0.3", features=["rocksdb"]}

# third party libraries
clap = {version = "~4.5", features=["derive"]}
multiaddr = {version = "~0.18"}
once_cell = {version = "~1.19"}
table-test = {version = "~0.2"} 
mockall  = {version = "~0.12"}
mockito = {version = "~1.5"}
toml = {version = "~0.8"}
