[package]
name = "prople-vessel-cli"
version = "0.1.0"
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prople-vessel-core.workspace = true
prople-vessel-rpc.workspace = true
prople-jsonrpc-core.workspace = true
prople-jsonrpc-client.workspace = true
prople-did-core.workspace = true
rst-common.workspace = true
rstdev-config.workspace = true
rstdev-storage.workspace = true
clap.workspace = true
