[package]
name = "prople-vessel-cli"
version = "0.2.0"
description = "A Vessel CLI client to communicate with the prople/vessel RPC server"
readme = "README.md"
keywords = ["prople", "vessel", "did", "decentralized", "identity", "cli"]
categories = ["authentication", "cryptography", "data-structures"]
documentation = "https://docs.rs/prople-vessel-cli"
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal prople/vessel libraries
prople-vessel-core.workspace = true
prople-vessel-rpc.workspace = true

# internal prople libraries
prople-jsonrpc-core.workspace = true
prople-jsonrpc-client.workspace = true
prople-did-core.workspace = true

# rst-common & #rstdev-* specific libraries
rst-common.workspace = true
rstdev-config.workspace = true
rstdev-storage.workspace = true

# third-party libraries
clap.workspace = true
homedir.workspace = true
toml.workspace = true
cli-table.workspace = true
multiaddr.workspace = true
http.workspace = true