[package]
name = "vessel-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prople-did-core.workspace = true
prople-crypto.workspace = true
rst-common.workspace = true
rstdev-domain.workspace = true
multiaddr.workspace = true

[dev-dependencies]
mockall.workspace = true
table-test.workspace = true