[package]
name = "prople-vessel-core"
version = "0.2.0"
description = "An abstraction of core business logic for the prople/vessel"
readme = "README.md"
keywords = ["prople", "vessel", "did", "decentralized", "identity"]
categories = ["authentication", "cryptography", "data-structures"]
documentation = "https://docs.rs/prople-vessel-core"
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prople-did-core.workspace = true
prople-crypto.workspace = true
rst-common.workspace = true
rstdev-domain.workspace = true
multiaddr.workspace = true

[dev-dependencies]
mockall.workspace = true
table-test.workspace = true