[package]
name = "prople-vessel-rpc"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prople-vessel-core.workspace = true
prople-did-core.workspace = true
prople-jsonrpc-core.workspace = true
prople-jsonrpc-client.workspace = true
prople-crypto.workspace = true
rst-common.workspace = true
rstdev-config.workspace = true
rstdev-storage.workspace = true
rstdev-domain.workspace = true
multiaddr.workspace = true
once_cell.workspace = true

[dev-dependencies]
mockall.workspace = true
table-test.workspace = true
toml.workspace = true
