[package]
name = "prople-vessel-rpc"
version = "0.2.0"
description = "Prople Vessel RPC provides core RPC processor"
readme = "README.md"
keywords = ["prople", "vessel", "did", "decentralized", "identity"]
categories = ["api-bindings"]
documentation = "https://docs.rs/prople-vessel-rpc"
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prople-vessel-core.workspace = true
prople-did-core.workspace = true
prople-jsonrpc-core.workspace = true
prople-jsonrpc-client.workspace = true
prople-crypto.workspace = true
rst-common.workspace = true
rstdev-config.workspace = true
rstdev-storage.workspace = true
rstdev-domain.workspace = true
multiaddr.workspace = true
once_cell.workspace = true

[dev-dependencies]
mockall.workspace = true
mockito.workspace = true
table-test.workspace = true
toml.workspace = true
