[package]
name = "prople-vesseld"
version = "0.2.1"
description = "Prople Vessel daemon provides RPC and P2P servers"
readme = "README.md"
keywords = ["prople", "vessel", "did", "decentralized", "identity"]
categories = ["api-bindings"]
documentation = "https://docs.rs/prople-vesseld"
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prople-vessel-rpc.workspace = true
prople-jsonrpc-core.workspace = true
prople-jsonrpc-axum.workspace = true
rst-common.workspace = true
clap.workspace = true
